--- a/part1/1.09/manifests/ingress.yaml
+++ b/part1/1.09/manifests/ingress.yaml
@@ -8,8 +8,15 @@ spec:
   rules:
   - http:
       paths:
-        - path: /status
+        - path: /
           pathType: Exact
+          backend:
+            service:
+              name: hashgenerator-svc
+              port:
+                number: 2345
+        - path: /status
+          pathType: Prefix
           backend:
             service:
               name: hashgenerator-svc
