--- a/part2/2.08/be-todos/pom.xml
+++ b/part2/2.08/be-todos/pom.xml
@@ -38,7 +38,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
