--- a/part2/2.04/manifests/ingress.yaml
+++ b/part2/2.04/manifests/ingress.yaml
@@ -21,3 +21,10 @@ spec:
                 name: todo-app-svc
                 port:
                   number: 3333
+          - path: /image
+            pathType: Prefix
+            backend:
+              service:
+                name: todo-app-svc
+                port:
+                  number: 3333
