--- a/part3/3.01/manifests/deployment.yaml
+++ b/part3/3.01/manifests/deployment.yaml
@@ -26,6 +26,8 @@ spec:
         - image: lnsth/logoutput:exercise_3.01
           imagePullPolicy: Always
           name: logoutput
+          ports:
+            - containerPort: 9999
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
