--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,6 +44,7 @@ jobs:
       uses: imranismail/setup-kustomize@v1
     - name: Deploy
       run: |-
+        pwd
         cd part3/3.03 && kustomize edit set image FEIMAGE=gcr.io/$PROJECT_ID/$IMAGE_FE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
         cd part3/3.03 && kustomize edit set image BEIMAGE=gcr.io/$PROJECT_ID/$IMAGE_BE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
         cd part3/3.03 && kustomize build . | kubectl apply -f -
