--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,8 +45,10 @@ jobs:
     - name: Deploy
       run: |-
         pwd
-        cd part3/3.03 && kustomize edit set image FEIMAGE=gcr.io/$PROJECT_ID/$IMAGE_FE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
-        cd part3/3.03 && kustomize edit set image BEIMAGE=gcr.io/$PROJECT_ID/$IMAGE_BE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
-        cd part3/3.03 && kustomize build . | kubectl apply -f -
+        ls
+        cd part3/3.03/
+        kustomize edit set image FEIMAGE=gcr.io/$PROJECT_ID/$IMAGE_FE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
+        kustomize edit set image BEIMAGE=gcr.io/$PROJECT_ID/$IMAGE_BE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
+        kustomize build . | kubectl apply -f -
         kubectl rollout status deployment todo-app
         kubectl get services -o wide
