--- a/part3/3.03/manifests/deployment.yaml
+++ b/part3/3.03/manifests/deployment.yaml
@@ -21,6 +21,7 @@ spec:
     metadata:
       labels:
         app: todo-app
+    spec:
       containers:
         - name: be-todos
           image: PROJECT/BEIMAGE
