--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,12 +44,9 @@ jobs:
       uses: imranismail/setup-kustomize@v1
     - name: Deploy
       run: |-
-        kubectl create namespace ${GITHUB_REF#refs/heads/} || true
-        kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
-        kustomize edit set namespace ${GITHUB_REF#refs/heads/}
         cd part3/3.03/
-        kustomize edit set image FEIMAGE=gcr.io/$PROJECT_ID/$IMAGE_FE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
-        kustomize edit set image BEIMAGE=gcr.io/$PROJECT_ID/$IMAGE_BE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
+        kustomize edit set image fe-todos=gcr.io/$PROJECT_ID/$IMAGE_FE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
+        kustomize edit set image be-todos=gcr.io/$PROJECT_ID/$IMAGE_BE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
         kustomize build . | kubectl apply -f -
         kubectl rollout status deployment todo-app
         kubectl get services -o wide
