--- a/part3/3.03/manifests/deployment.yaml
+++ b/part3/3.03/manifests/deployment.yaml
@@ -32,6 +32,22 @@ spec:
         - name: fe-todos
           image: fe-todos
           imagePullPolicy: Always
+          env:
+            - name: spring.datasource.url
+              valueFrom:
+                secretKeyRef:
+                  name: todoapp-postgress-secret
+                  key: spring.datasource.url
+            - name: spring.datasource.username
+              valueFrom:
+                secretKeyRef:
+                  name: todoapp-postgress-secret
+                  key: POSTGRES_USER
+            - name: spring.datasource.password
+              valueFrom:
+                secretKeyRef:
+                  name: todoapp-postgress-secret
+                  key: POSTGRES_PASSWORD    
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
