--- a/part3/3.03/kustomization.yaml
+++ b/part3/3.03/kustomization.yaml
@@ -3,6 +3,10 @@ kind: Kustomization
 resources:
 - manifests/deployment.yaml
 - manifests/service.yaml
+- manifests/postgres-deployment.yaml
+- manifests/postgres-secret.yaml
+- manifests/postgres-service.yaml
+
 images:
 - name: fe-todos
   newName: lnsth/todo-app-fe:exercise_3.03
