--- a/part3/3.03/be-todos/src/main/resources/application.properties
+++ b/part3/3.03/be-todos/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.application.name=todo-app-be
 server.port=9999
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/todo-app-be
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=postgres
+spring.datasource.password=postgres
