--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,7 +49,7 @@ jobs:
         kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
         echo "set-context"
 
-        kustomize edit set namespace ${GITHUB_REF#refs/heads
+        kustomize edit set namespace ${GITHUB_REF#refs/heads/}
         echo "set-context1"
         cd part3/3.03/
         echo "set-context2"
