--- a/part3/3.07/manifests/postgres-deployment.yaml
+++ b/part3/3.07/manifests/postgres-deployment.yaml
@@ -36,6 +36,7 @@ spec:
           volumeMounts:
             - mountPath: "/var/lib/postgresql/data"
               name: "postgres-volume"
+              subPath: postgres
       volumes:
         - name: postgres-volume
           persistentVolumeClaim:
