--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,3 +50,6 @@ jobs:
         kustomize edit set namespace ${GITHUB_REF#refs/heads/}
         kustomize edit set image fe-todos=gcr.io/$PROJECT_ID/$IMAGE_FE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
         kustomize edit set image be-todos=gcr.io/$PROJECT_ID/$IMAGE_BE:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
+        kustomize build . | kubectl apply -f -
+        kubectl rollout status deployment todo-app
+        kubectl get services -o wide
