--- a/part3/3.08/kustomization.yaml
+++ b/part3/3.08/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - manifests/postgres-secret.yaml
 - manifests/postgres-service.yaml
 - manifests/persistentvolumeclaim.yaml
+- manifests/horizontalpodautoscaler.yaml
 
 images:
 - name: fe-todos
