--- a/part3/3.08/manifests/deployment.yaml
+++ b/part3/3.08/manifests/deployment.yaml
@@ -50,6 +50,10 @@ spec:
           terminationMessagePolicy: File
         - name: fe-todos
           image: fe-todos
+          resources:
+            limits:
+              cpu: "150m"
+              memory: "100Mi"
           imagePullPolicy: Always
       dnsPolicy: ClusterFirst
       restartPolicy: Always
