--- a/part3/3.02/pingpong/src/main/resources/application.properties
+++ b/part3/3.02/pingpong/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-logging.pattern.console=
-logging.level.root=OFF
-spring.main.banner-mode=off
+#logging.pattern.console=
+#logging.level.root=OFF
+#spring.main.banner-mode=off
 spring.application.name=pingpong
-server.port=8888
+server.port=9999
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pingpong
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
