--- a/part3/3.09/logoutput/logoutput1/Makefile
+++ b/part3/3.09/logoutput/logoutput1/Makefile
@@ -1,5 +1,5 @@
 IMAGE_TAG=exercise_3.02
-IMAGE_NAME_WITH_TAG=pingpong:$(IMAGE_TAG)
+IMAGE_NAME_WITH_TAG=logoutput1:$(IMAGE_TAG)
 
 all: package  image  push-image
 
@@ -19,6 +19,5 @@ push-image:
 run:
 	./mvnw org.springframework.boot:spring-boot-maven-plugin:run
 
-start-postgres:
-
-
+print-image:
+	echo $(IMAGE_NAME_WITH_TAG)
