--- a/part3/3.02/pingpong/src/main/resources/application.properties
+++ b/part3/3.02/pingpong/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.application.name=pingpong
 server.port=9999
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/pingpong
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
