--- a/project/manifests/deployment.yaml
+++ b/project/manifests/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: todo-app
   name: todo-app
-  namespace: default
+  namespace: todo-app-ns
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
