--- a/part4/4.05/manifests/deployment.yaml
+++ b/part4/4.05/manifests/deployment.yaml
@@ -1,20 +1,22 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: todo-app-rollout
+  labels:
+    app: todo-app
+  name: todo-app
   namespace: todo-app-ns
 spec:
+  progressDeadlineSeconds: 600
   replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: todo-app
   strategy:
-    canary:
-      steps:
-      - setWeight: 50
-      - analysis:
-          templates:
-          - templateName: cpu-usage-rate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -22,7 +24,7 @@ spec:
     spec:
       containers:
         - name: be-todos
-          image: lnsth/todo-app-be:exercise_4.05
+          image: be-todos
           imagePullPolicy: Always
           readinessProbe:
             initialDelaySeconds: 90
@@ -36,6 +38,13 @@ spec:
             httpGet:
                path: /todo
                port: 9999
+          resources:
+            requests:
+              memory: "250Mi"
+              cpu: "250m"
+            limits:
+              memory: "500Mi"
+              cpu: "350m"
           env:
             - name: spring.datasource.url
               valueFrom:
@@ -43,6 +52,7 @@ spec:
                   name: todoapp-postgress-secret
                   key: spring.datasource.url
             - name: spring.datasource.username
+              #value: "wong username"
               valueFrom:
                 secretKeyRef:
                   name: todoapp-postgress-secret
@@ -55,5 +65,17 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
         - name: fe-todos
-          image: lnsth/todo-app-fe:exercise_4.05
+          image: fe-todos
+          resources:
+            requests:
+              memory: "200Mi"
+              cpu: "250m"
+            limits:
+              memory: "300Mi"
+              cpu: "350m"
           imagePullPolicy: Always
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
