--- a/.github/workflows/gitops.yaml
+++ b/.github/workflows/gitops.yaml
@@ -3,7 +3,7 @@ name: gitops
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'project/**'
       - '.github/workflows/gitops.yml'
