--- a/.github/workflows/gitops.yaml
+++ b/.github/workflows/gitops.yaml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'project/**'
-      - '.github/workflows/gitops.yml'
+      - '.github/workflows/gitops.yaml'
 
 jobs:
   build:
