--- a/.github/workflows/gitops.yaml
+++ b/.github/workflows/gitops.yaml
@@ -16,10 +16,10 @@ jobs:
     - name: package backend todos
       run: |-
           echo $(pwd)
-          cd be-todos && ./mvnw clean package -Dmaven.test.skip=true
+          cd project/be-todos && ./mvnw clean package -Dmaven.test.skip=true
     - name: package broadcaster
       run: |-
-          cd broadcaster && ./mvnw clean package -Dmaven.test.skip=true
+          cd project/broadcaster && ./mvnw clean package -Dmaven.test.skip=true
 
   build:
     name: Create docker image
