--- a/.github/workflows/gitops.yaml
+++ b/.github/workflows/gitops.yaml
@@ -13,6 +13,9 @@ jobs:
     name: Create jar
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      
     - name: package backend todos
       run: |-
           echo $(pwd)
