--- a/project/kustomization.yaml
+++ b/project/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- deployment.yaml
-- service.yaml
-- postgres-deployment.yaml
-- postgres-secret.yaml
-- postgres-service.yaml
-- persistentvolumeclaim.yaml
-- broadcaster-secret.yaml
+- manifests/deployment.yaml
+- manifests/service.yaml
+- manifests/postgres-deployment.yaml
+- manifests/postgres-secret.yaml
+- manifests/postgres-service.yaml
+- manifests/persistentvolumeclaim.yaml
+- manifests/broadcaster-secret.yaml
 
 images:
 - name: be-todos
